--- a/src/views/login/login.hbs
+++ b/src/views/login/login.hbs
@@ -3,17 +3,17 @@
         <div class="card-body">
             <h1 class="text-center">Nome da Empresa</h1>
             <div class="container mt-3">
-                <form action="" method="post">
+                <form action="/login" method="post">
                     <div class="row col-12">
                         <div class="form-group col-12">
                             <label for="">E-mail</label>
-                            <input type="text" placeholder="Digite seu E-mail" class="form-control">
+                            <input type="text" placeholder="Digite seu E-mail" class="form-control" name="email">
                         </div>
                     </div>
                     <div class="row col-12">
                         <div class="form-group col-12">
                             <label for="">Senha</label>
-                            <input type="password" placeholder="Digite sua Senha" class="form-control">
+                            <input type="password" placeholder="Digite sua Senha" class="form-control" name="password">
                         </div>
                     </div>
                     <div class="row col-12 mt-2 ml-5">
