--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -21,12 +21,12 @@
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="true"> <i class="menu-icon fa fa-laptop"></i>Components</a>
-                    <ul class="sub-menu children dropdown-menu show">
+                    <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-fire"></i><a href="ui-modals.html">Cadastrar Msg</a></li>                       
                         <li><i class="fa fa-file-word-o"></i><a href="ui-typgraphy.html">Visualizar Msg</a></li>
                     </ul>
                 </li>
-                <li class="menu-item-has-children dropdown mt-5">
+                <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Tables</a>
                     <ul class="sub-menu children dropdown-menu">
