--- a/src/views/menu/register.hbs
+++ b/src/views/menu/register.hbs
@@ -4,6 +4,17 @@
             <h5>Cadastre seu Cardápio</h5>
             <hr>
             <form action="/menu/register" method="post">
+            <div class="row col-12">
+                <div class="form-group col-12">
+                    <select name="class" id="class" class="form-control">
+                        <option value="promocoes">Promoções</option>
+                        <option value="lanches">Laches</option>
+                        <option value="pizza">Pizza</option>
+                        <option value="bebidas">Bebidas</option>
+                        <option value="doces">Doces</option>
+                    </select>
+                </div>
+            </div>
                 <div class="row col-12">
                     <div class="form-group col-12">
                         <label for="">Nome</label>
