--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -22,8 +22,11 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="true"> <i class="menu-icon fa fa-laptop"></i>Components</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="fa fa-fire"></i><a href="ui-modals.html">Cadastrar Msg</a></li>                       
-                        <li><i class="fa fa-file-word-o"></i><a href="ui-typgraphy.html">Visualizar Msg</a></li>
+                        <li><i class="fa fa-fire"></i><a href="/msg/register">Cadastrar Msg</a></li>                       
+                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Visualizar Msg</a></li>
+                        <li><i class="fa fa-file-word-o"></i><a href="/menu/register">Cadastrar Menu</a></li>
+                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Visualizar Menu</a></li>
+                        <li><i class="fa fa-file-word-o"></i><a href="/clients/">Visualizar Clientes</a></li>
                     </ul>
                 </li>
                 <li class="menu-item-has-children dropdown">
