instalado no ubuntu

--- a/src/views/login/login.hbs
+++ b/src/views/login/login.hbs
@@ -8,13 +8,13 @@
                     <div class="row col-12">
                         <div class="form-group col-12">
                             <label for="">E-mail</label>
-                            <input type="text" placeholder="Digite seu E-mail" class="form-control" name="email">
+                            <input type="text" placeholder="Digite seu E-mail" class="form-control" name="email" value="admin@gmail.com">
                         </div>
                     </div>
                     <div class="row col-12">
                         <div class="form-group col-12">
                             <label for="">Senha</label>
-                            <input type="password" placeholder="Digite sua Senha" class="form-control" name="password">
+                            <input type="password" placeholder="Digite sua Senha" class="form-control" name="password" value="secret(!@#)">
                         </div>
                     </div>
                     <div class="row col-12 mt-2 ml-5">
