separando dependencias bot

--- a/src/views/formMSG/register.hbs
+++ b/src/views/formMSG/register.hbs
@@ -3,6 +3,7 @@
         <div class="card-body">
             <h5 class="card-text">Cadastrar Mensagens</h5>
             <hr>
+            {{>_msg}}
             <div class="card-body">
                 <form action="/msg/register" method="post">
                     <div class="row mt-3">
