--- a/src/views/clients/clients.hbs
+++ b/src/views/clients/clients.hbs
@@ -6,12 +6,14 @@
                     <div class="form-group">
                         <h5><strong>nome: </strong>{{dataValues.name}}</h5>
                         <h5><strong>telefone: </strong> {{dataValues.telephone}}</h5>
+                        <img src="{{dataValues.photograph}}" alt="Foto de Perfil">
+                        <br>
                         <a href="{{dataValues.photograph}}"><strong>Foto: </strong> {{dataValues.photograph}}</a>
                         <p><strong>stage: </strong>{{dataValues.stage}}</p>
                     </div>
                     <hr>
             </div>
                 {{/each}}
-        </div>
+         </div>
     </div>
 </div>
