--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -15,9 +15,9 @@
         <div id="main-menu" class="main-menu collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active">
-                    <a href="index.html"> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
+                    <a href="index.html"> <i class="menu-icon fa fa-dashboard"></i>Painel De Controle</a>
                 </li>
-                <h3 class="menu-title">UI elements</h3><!-- /.menu-title -->
+                <h3 class="menu-title">Registros</h3><!-- /.menu-title -->
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="true"> <i class="menu-icon fa fa-laptop"></i>Components</a>
