--- a/src/views/config/entrega.hbs
+++ b/src/views/config/entrega.hbs
@@ -9,19 +9,19 @@
                 <form action="" method="post">
                     <div class="form-group col-12">
                         <label for="">Cadastre os Bairros disponíveis para entrega</label>
-                        <input type="text" name="" id="" class="form-control" placeholder="Digite o nome do bairro">
+                        <input type="text" name="bairro" id="bairro" class="form-control" placeholder="Digite o nome do bairro">
                     </div>
                     <div class="form-group col-12">
                         <label for="">Cadastre as cidades disponíveis para entrega</label>
-                        <input type="text" name="" id="" class="form-control" placeholder="Digite o nome da cidade">
+                        <input type="text" name="cidade" id="cidade" class="form-control" placeholder="Digite o nome da cidade">
                     </div>
                     <div class="form-group col-12">
                         <label for="">Valor da Entrega</label>
-                        <input type="text" name="" id="" class="form-control" placeholder="Digite o valor da entrega">
+                        <input type="text" name="valor" id="valor" class="form-control" placeholder="Digite o valor da entrega">
                     </div>
                     <div class="form-group col-12">
                         <label for="">Tempo Médio para Entrega</label>
-                        <input type="text" name="" id="" class="form-control"
+                        <input type="text" name="tempoEspera" id="tempoEspera" class="form-control"
                             placeholder="Digite o Tempo médio para entrega">
                     </div>
                     <div class="form-group col-12 mt-2">
