--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -15,40 +15,40 @@
         <div id="main-menu" class="main-menu collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active">
-                    <a href="index.html"> <i class="menu-icon fa fa-dashboard"></i>Painel De Controle</a>
+                    <a href="/"> <i class="menu-icon fa fa-dashboard"></i>Painel De Controle</a>
                 </li>
                 <h3 class="menu-title">Registros</h3><!-- /.menu-title -->
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="true"> <i class="menu-icon fa fa-laptop"></i>Components</a>
-                    <ul class="sub-menu children dropdown-menu">
-                        <li><i class="fa fa-fire"></i><a href="/msg/register">Cadastrar Msg</a></li>                       
-                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Visualizar Msg</a></li>
-                        <li><i class="fa fa-file-word-o"></i><a href="/menu/register">Cadastrar Menu</a></li>
-                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Visualizar Menu</a></li>
-                        <li><i class="fa fa-file-word-o"></i><a href="/clients/">Visualizar Clientes</a></li>
+                    <ul class="sub-menu children dropdown-menu">                                              
+                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Media de Pedidos</a></li>                                           
+                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Media de Lucro</a></li>
+                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Lucros</a></li>                                           
+                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Gastos</a></li>                                                                   
+
                     </ul>
                 </li>
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Tables</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="fa fa-table"></i><a href="tables-basic.html">Basic Table</a></li>
-                        <li><i class="fa fa-table"></i><a href="tables-data.html">Data Table</a></li>
-                        <li><i></i><a href=""></a></li>
+                        <li><i class="fa fa-table"></i><a href="/msg/views">Visualizar Msg</a></li>                    
+                        <li><i class="fa fa-table"></i><a href="/msg/views">Visualizar Menu</a></li>
+                        <li><i class="fa fa-table"></i><a href="/clients/">Visualizar Clientes</a></li>
                     </ul>
-                </li>
+                </li>                
+                <h3 class="menu-title">Icons</h3><!-- /.menu-title -->
                 <li class="menu-item-has-children dropdown ">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false"> <i class="menu-icon fa fa-th"></i>Forms</a>
+                        aria-expanded="false"> <i class="menu-icon fa fa-cogs"></i>Configurações</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="menu-icon fa fa-th"></i><a href="forms-basic.html">Basic Form</a></li>
-                        <li><i class="menu-icon fa fa-th"></i><a href="forms-advanced.html">Advanced Form</a></li>
+                        <li><i class="menu-icon fa fa-gear"></i><a href="/msg/register">Configurar Menssagens</a></li>
+                        <li><i class="menu-icon fa fa-gear"></i><a href="/menu/register">Cadastrar Menu</a></li>
+                        <li><i class="menu-icon fa fa-gear"></i><a href="">Configurar Delivery</a></li>
+                        <li><i class="menu-icon fa fa-gear"></i><a href="">Configurar Thema</a></li>
                     </ul>
                 </li>
-
-                <h3 class="menu-title">Icons</h3><!-- /.menu-title -->
-
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-tasks"></i>Icons</a>
@@ -60,17 +60,7 @@
                 </li>
                 <li>
                     <a href="widgets.html"> <i class="menu-icon ti-email"></i>Widgets </a>
-                </li>
-                <li class="menu-item-has-children dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false"> <i class="menu-icon fa fa-bar-chart"></i>Charts</a>
-                    <ul class="sub-menu children dropdown-menu">
-                        <li><i class="menu-icon fa fa-line-chart"></i><a href="charts-chartjs.html">Chart JS</a></li>
-                        <li><i class="menu-icon fa fa-area-chart"></i><a href="charts-flot.html">Flot Chart</a></li>
-                        <li><i class="menu-icon fa fa-pie-chart"></i><a href="charts-peity.html">Peity Chart</a></li>
-                    </ul>
-                </li>
-
+                </li>                
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-area-chart"></i>Maps</a>
@@ -82,13 +72,14 @@
                 <h3 class="menu-title">Extras</h3><!-- /.menu-title -->
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Pages</a>
+                        aria-expanded="false"> <i class="menu-icon fa fa-wrench"></i>Suporte técnico</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Login</a></li>
-                        <li><i class="menu-icon fa fa-sign-in"></i><a href="page-register.html">Register</a></li>
-                        <li><i class="menu-icon fa fa-paper-plane"></i><a href="pages-forget.html">Forget Pass</a></li>
+                        <li><i class="menu-icon fa fa-line-chart"></i><a href="charts-chartjs.html">XXX@hotmail.com</a></li>
+                        <li><i class="menu-icon fa fa-area-chart"></i><a href="charts-flot.html">Messagem Whatsapp</a></li>
                     </ul>
-                </li>
+                </li>                
+                <li><i class="menu-icon fa fa-code mt-5" style="color: rgba(255, 255, 255, 0.527);"> Author: <a href="" class="text-center" style="color: rgba(255, 255, 255, 0.527);">Mendes & IsaacDSC</a></i></li>
+                <li class="ml-4"><i class="menu-icon fa fa-globe"  style="color:rgba(255, 255, 255, 0.527)"> <a href="">Mananging Business</a></i></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </nav>
