--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -20,18 +20,18 @@
                 <h3 class="menu-title">Registros</h3><!-- /.menu-title -->
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="true"> <i class="menu-icon fa fa-laptop"></i>Components</a>
+                        aria-expanded="true"> <i class="menu-icon fa fa-laptop"></i>Dados Empresa</a>
                     <ul class="sub-menu children dropdown-menu">                                              
-                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Media de Pedidos</a></li>                                           
-                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Media de Lucro</a></li>
-                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Lucros</a></li>                                           
-                        <li><i class="fa fa-file-word-o"></i><a href="/msg/views">Gastos</a></li>                                                                   
+                        <li><i class="fa fa-bar-chart-o"></i><a href="/msg/views">Media de Pedidos</a></li>                                           
+                        <li><i class="fa fa-bar-chart-o"></i><a href="/msg/views">Media de Lucro</a></li>
+                        <li><i class="fa fa-money"></i><a href="/msg/views">Lucros</a></li>                                           
+                        <li><i class="fa fa-toggle-down"></i><a href="/msg/views">Gastos</a></li>                                                                   
 
                     </ul>
                 </li>
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Tables</a>
+                        aria-expanded="false"> <i class="menu-icon fa fa-desktop"></i>Visualizar Configurações</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-table"></i><a href="/msg/views">Visualizar Msg</a></li>                    
                         <li><i class="fa fa-table"></i><a href="/msg/views">Visualizar Menu</a></li>
