--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -6,11 +6,12 @@
             </div>
         </div>
     </div>
+    <audio class=".d-none" id="sound"></audio>
     <div class="col-sm-8">
         <div class="page-header float-right">
             <div class="page-title">
                 <ol class="breadcrumb text-right">
-                    <p>Ligar / Desligar &nbsp;&nbsp;</p>                   
+                    <p>Ligar / Desligar &nbsp;&nbsp;</p>
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider round"></span>
@@ -287,7 +288,7 @@
                 <div class="stat-widget-one">
                     <div class="stat-icon dib"><i class="ti-layout-grid2 text-warning border-warning"></i></div>
                     <div class="stat-content dib">
-                        <div class="stat-text">Gasto materiais</div>
+                        <div class="stat-text" onclick="playSound">Gasto materiais</div>
                         <div class="stat-digit">770</div>
                     </div>
                 </div>
@@ -298,3 +299,14 @@
 </div><!-- /#right-panel -->
 
 <!-- Right Panel -->
+
+<script type="text/javascript">
+    var socket = io('http://localhost:3000')
+
+
+
+    function playSound() {
+        var audio = new Audio('../campainha.mp3');
+        audio.play();
+    }
+</script>
