--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -6,7 +6,7 @@
             </div>
         </div>
     </div>
-    <audio class=".d-none" id="sound"></audio>
+    <audio autoplay='true' src="campainha.mp3"></audio>
     <div class="col-sm-8">
         <div class="page-header float-right">
             <div class="page-title">
@@ -288,7 +288,7 @@
                 <div class="stat-widget-one">
                     <div class="stat-icon dib"><i class="ti-layout-grid2 text-warning border-warning"></i></div>
                     <div class="stat-content dib">
-                        <div class="stat-text" onclick="playSound">Gasto materiais</div>
+                        <div class="stat-text" onclick="playSound()">Gasto materiais</div>
                         <div class="stat-digit">770</div>
                     </div>
                 </div>
@@ -306,7 +306,8 @@
 
 
     function playSound() {
-        var audio = new Audio('../campainha.mp3');
-        audio.play();
+        alert('oi')
+      //  const som =  document.getElementById("sound")
+       // som.play();
     }
 </script>
