--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -303,7 +303,10 @@
 <script type="text/javascript">
     var socket = io('http://localhost:3000')
 
-    
+    socket.on('PedidoConcluido',function(data){
+        playSound()
+    })
+    //Enviar o User e o Status do pedido quando mudar para o backend
 
 
     function playSound() {
