--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -45,7 +45,7 @@
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="menu-icon fa fa-gear"></i><a href="/msg/register">Configurar Menssagens</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="/menu/register">Cadastrar Menu</a></li>
-                        <li><i class="menu-icon fa fa-gear"></i><a href="">Configurar Delivery</a></li>
+                        <li><i class="menu-icon fa fa-gear"></i><a href="/config/delivery">Configurar Delivery</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="">Configurar Thema</a></li>
                     </ul>
                 </li>
