--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -160,7 +160,10 @@
     <div class="col-xl-9">
         <div class="card">
             <div class="card-body">
-                <div class="row">
+                <div class="row">   
+                    
+                    {{!-- fazer o carregamento de cada pedido começando por aqui --}}
+
                     <div class="col-sm-4">
                         <h4 class="card-title mb-0">Pedidos</h4>
                         <div class="small text-muted">October 2017</div>
@@ -176,6 +179,7 @@
 
                         </div>
                     </div>
+                    
                     <div class="form-group mt-1 col-12">
                         <p class="ml-3">Preparando <input type="radio" name="" id="" value="">&nbsp;&nbsp; Saiu para
                             Entrega <input type="radio" name="" id="" value="">&nbsp;&nbsp; Entregue <input type="radio"
@@ -184,7 +188,7 @@
                     </div>
                     <div class="form-group col-12">
                         <div class="form-group col-4">
-                            <h6 class=""><strong>Pedido: </strong> #1</h6>
+                            <h6 class=""><strong>Pedido: </strong> #{{dataValues.id}}</h6>
                         </div>
                         <div class="form-group col-8">
                             <h6 class=""><strong>Nome: </strong> Jose Silva &nbsp;&nbsp;&nbsp;<strong>Telefone:
@@ -192,7 +196,7 @@
                         </div>
                         <div class="form-group ml-3">
                             <h6 class="mt-1"><strong>Total: <i class="fa fa-money"></i></strong> R$ 30,00</i></h6>
-                            <h6 class="mt-1"><strong>Foma de Pagamento: </strong><i class="fa fa-money"></i> R$ 50,00
+                            <h6 class="mt-1"><strong>Foma de Pagamento: </strong><i class="fa fa-money"> {{dataValues.formPayment}}</i> R$ 50,00
                             </h6>
                             <h6 class="mt-1"><strong>Foma de Pagamento: </strong><i class="fa  fa-credit-card">
                                     Cartao</i></h6>
@@ -210,18 +214,21 @@
                         <h5 class="text-center">Dados do Pedido</h5>
                         <table style="width:100%" border="1px black solid" class="mt-1">
                             <tr>
+                                <th class="text-center">Id</th>
                                 <th class="text-center">Nome</th>
                                 <th class="text-center">Observação</th>
                                 <th class="text-center">Quantidade</th>
                                 <th class="text-center">Subtotal</th>
                             </tr>
                             <tr>
-                                <td class="text-center">X-Tudo</td>
-                                <td class="text-center">sem milho</td>
-                                <td class="text-center">2x</td>
+                                <td class="text-center">{{dataValues.MenuNameId}}</td>
+                                <td class="text-center"> X-Tudo</td>
+                                <td class="text-center">{{dataValues.note}}</td>
+                                <td class="text-center">{{dataValues.quantity}}x</td>
                                 <td class="text-center">R$ 12,00</td>
                             </tr>
                             <tr>
+                                <td class="text-center">{{dataValues.MenuNameId}}</td>
                                 <td class="text-center">Bebidas</td>
                                 <td class="text-center">sem milho</td>
                                 <td class="text-center">2x</td>
@@ -230,6 +237,7 @@
                         </table>
                         <hr class="mt-5">
                     </div>
+                    {{/each}}
                     {{!-- Inicio Pagination --}}
                     <nav aria-label="Page navigation example" style="margin-left: 35%;">
                         <ul class="pagination">
