retirando /each do index

--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -237,7 +237,9 @@
                         </table>
                         <hr class="mt-5">
                     </div>
-                    {{/each}}
+
+                {{!-- Fim do each  --}}
+
                     {{!-- Inicio Pagination --}}
                     <nav aria-label="Page navigation example" style="margin-left: 35%;">
                         <ul class="pagination">
