--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,20 +17,18 @@
     <link rel="stylesheet" href="/vendors/flag-icon-css/css/flag-icon.min.css">
     <link rel="stylesheet" href="/vendors/selectFX/css/cs-skin-elastic.css">
     <link rel="stylesheet" href="/vendors/jqvmap/dist/jqvmap.min.css">
-
     <link rel="stylesheet" href="/assets/css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/buttonOnOff.css">
 </head>
 
 <body>
+    <audio id="sound" src="/audio/campainha.mp3"></audio>
     {{>_sidebar}}
     <div id="right-panel" class="right-panel">
-    {{>_nav}}
-    {{{body}}}
+        {{>_nav}}
+        {{{body}}}
     </div>
-
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -41,12 +39,25 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-            <script src="/vendors/jquery/dist/jquery.min.js"></script>
+    <script src="/vendors/jquery/dist/jquery.min.js"></script>
     <script src="/vendors/popper.js/dist/umd/popper.min.js"></script>
     <script src="/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/assets/js/main.js"></script>
 
+    <script type="text/javascript">
+        var socket = io('http://localhost:3000')
 
+        socket.on('PedidoConcluido', function (data) {
+            playSound()
+        })
+        //Enviar o User e o Status do pedido quando mudar para o backend
+
+
+        function playSound() {
+            const som = document.getElementById("sound")
+            som.play();
+        }
+    </script>
     <script src="/vendors/chart.js/dist/Chart.bundle.min.js"></script>
     <script src="/assets/js/dashboard.js"></script>
     <script src="/assets/js/widgets.js"></script>
@@ -54,7 +65,7 @@
     <script src="/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
     <script src="/vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
     <script>
-        (function($) {
+        (function ($) {
             "use strict";
 
             jQuery('#vmap').vectorMap({
@@ -71,7 +82,6 @@
             });
         })(jQuery);
     </script>
-    
 </body>
 
 </html>
