--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -187,7 +187,7 @@
                     </div>
                     <div class="form-group col-12">
                         <div class="form-group col-4">
-                            <h6 class=""><strong>Pedido: </strong> #{{dataValues.id}}</h6>
+                            <h6 class=""><strong>Pedido: </strong> #</h6>
                         </div>
                         <div class="form-group col-8">
                             <h6 class=""><strong>Nome: </strong> Jose Silva &nbsp;&nbsp;&nbsp;<strong>Telefone:
@@ -195,7 +195,7 @@
                         </div>
                         <div class="form-group ml-3">
                             <h6 class="mt-1"><strong>Total: <i class="fa fa-money"></i></strong> R$ 30,00</i></h6>
-                            <h6 class="mt-1"><strong>Foma de Pagamento: </strong><i class="fa fa-money"> {{dataValues.formPayment}}</i> R$ 50,00
+                            <h6 class="mt-1"><strong>Foma de Pagamento: </strong><i class="fa fa-money"> </i> R$ 50,00
                             </h6>
                             <h6 class="mt-1"><strong>Foma de Pagamento: </strong><i class="fa  fa-credit-card">
                                     Cartao</i></h6>
@@ -220,14 +220,14 @@
                                 <th class="text-center">Subtotal</th>
                             </tr>
                             <tr>
-                                <td class="text-center">{{dataValues.MenuNameId}}</td>
+                                <td class="text-center"></td>
                                 <td class="text-center"> X-Tudo</td>
-                                <td class="text-center">{{dataValues.note}}</td>
-                                <td class="text-center">{{dataValues.quantity}}x</td>
+                                <td class="text-center"></td>
+                                <td class="text-center">x</td>
                                 <td class="text-center">R$ 12,00</td>
                             </tr>
                             <tr>
-                                <td class="text-center">{{dataValues.MenuNameId}}</td>
+                                <td class="text-center"></td>
                                 <td class="text-center">Bebidas</td>
                                 <td class="text-center">sem milho</td>
                                 <td class="text-center">2x</td>
