--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -1,3 +1,4 @@
+{{>_popup}}
 <div class="breadcrumbs">
     <div class="col-sm-4">
         <div class="page-header float-left">
@@ -12,7 +13,7 @@
                 <ol class="breadcrumb text-right">
                     <p>Ligar / Desligar &nbsp;&nbsp;</p>
                     <label class="switch">
-                        <input type="checkbox">
+                        <input type="checkbox" onclick="abrir()">
                         <span class="slider round"></span>
                     </label>
                 </ol>
