--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -1,4 +1,3 @@
-{{>_popup}}
 <div class="breadcrumbs">
     <div class="col-sm-4">
         <div class="page-header float-left">
@@ -13,7 +12,7 @@
                 <ol class="breadcrumb text-right">
                     <p>Ligar / Desligar &nbsp;&nbsp;</p>
                     <label class="switch">
-                        <input type="checkbox" onclick="abrir()">
+                        <input type="checkbox">
                         <span class="slider round"></span>
                     </label>
                 </ol>
