--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/buttonOnOff.css">
+    <link rel="stylesheet" href="/css/popup.css">
 </head>
 
 <body>
@@ -82,6 +83,8 @@
             });
         })(jQuery);
     </script>
+
+
 </body>
 
 </html>
