--- a/src/views/partials/_popup.hbs
+++ b/src/views/partials/_popup.hbs
@@ -8,8 +8,8 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-          <img src="/img/" alt="Qr code">
+        <div class="modal-body ml-5">
+          <img src="/images/qrCode.png" class="ml-5" alt="Qr code">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
