--- a/src/views/partials/_popup.hbs
+++ b/src/views/partials/_popup.hbs
@@ -1,4 +1,4 @@
-<div class="constainer" id="fundo">
+<div id="atualiza" class="constainer" id="fundo">
   <div class="modal" tabindex="1" id="popup">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -8,8 +8,8 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body ml-5">
-          <img src="/images/qrCode.png" class="ml-5" alt="Qr code">
+        <div id="divQr" class="modal-body ml-5">
+          <img id="qrCode" src="/images/qrCode.png" class="ml-5" alt="Qr code">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
@@ -19,3 +19,9 @@
     </div>
   </div>
 </div>
+
+<script>
+ setInterval(()=>{
+ document.getElementById('qrCode').src = "/images/qrCode.png?random="+new Date().getTime();
+},4000) 
+</script>
