--- a/src/views/partials/_popup.hbs
+++ b/src/views/partials/_popup.hbs
@@ -20,8 +20,4 @@
   </div>
 </div>
 
-<script>
- setInterval(()=>{
- document.getElementById('qrCode').src = "/images/qrCode.png?random="+new Date().getTime();
-},4000)
-</script>
+<script src="/scripts/imageQrCode.js"></script>
