adionano mudanças botao on/off e add query

--- a/src/views/partials/_popup.hbs
+++ b/src/views/partials/_popup.hbs
@@ -12,8 +12,7 @@
           <img id="qrCode" src="/images/qrCode.png" class="ml-5" alt="Qr code">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary">Salvar Qr code</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Sair</button>
         </div>
       </div>
     </div>
