--- a/src/views/clients/clients.hbs
+++ b/src/views/clients/clients.hbs
@@ -4,8 +4,8 @@
                 {{#each clients}}
             <div class="row col-12">
                     <div class="form-group">
-                        <h5><strong>nome: </strong>{{dataValues.name}}</h5>
-                        <h5><strong>telefone: </strong> {{dataValues.telephone}}</h5>
+                        <h5><strong>Nome: </strong>{{dataValues.name}}</h5>
+                        <h5><strong>Telefone: </strong> {{dataValues.telephone}}</h5>
                         <img src="{{dataValues.photograph}}" alt="Foto de Perfil">
                         <br>
                         <a href="{{dataValues.photograph}}"><strong>Foto: </strong> {{dataValues.photograph}}</a>
