--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -160,8 +160,8 @@
     <div class="col-xl-9">
         <div class="card">
             <div class="card-body">
-                <div class="row">   
-                    
+                <div class="row">
+
                     {{!-- fazer o carregamento de cada pedido começando por aqui --}}
 
                     <div class="col-sm-4">
@@ -179,7 +179,7 @@
 
                         </div>
                     </div>
-                    
+
                     <div class="form-group mt-1 col-12">
                         <p class="ml-3">Preparando <input type="radio" name="" id="" value="">&nbsp;&nbsp; Saiu para
                             Entrega <input type="radio" name="" id="" value="">&nbsp;&nbsp; Entregue <input type="radio"
@@ -190,10 +190,12 @@
                         <div class="form-group col-4">
                             <h6 class=""><strong>Pedido: </strong> #</h6>
                         </div>
+                        {{#each requests}}
                         <div class="form-group col-8">
-                            <h6 class=""><strong>Nome: </strong> Jose Silva &nbsp;&nbsp;&nbsp;<strong>Telefone:
+                            <h6 class=""><strong>Nome: </strong> {{this.name}} &nbsp;&nbsp;&nbsp;<strong>Telefone:
                                 </strong> 24988888888</h6>
                         </div>
+                        {{/each}}
                         <div class="form-group ml-3">
                             <h6 class="mt-1"><strong>Total: <i class="fa fa-money"></i></strong> R$ 30,00</i></h6>
                             <h6 class="mt-1"><strong>Foma de Pagamento: </strong><i class="fa fa-money"> </i> R$ 50,00
@@ -238,7 +240,7 @@
                         <hr class="mt-5">
                     </div>
 
-                {{!-- Fim do each  --}}
+                    {{!-- Fim do each  --}}
 
                     {{!-- Inicio Pagination --}}
                     <nav aria-label="Page navigation example" style="margin-left: 35%;">
