--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -45,20 +45,7 @@
     <script src="/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/assets/js/main.js"></script>
 
-    <script type="text/javascript">
-        var socket = io('http://localhost:3000')
-
-        socket.on('PedidoConcluido', function (data) {
-            playSound()
-        })
-        //Enviar o User e o Status do pedido quando mudar para o backend
-
-
-        function playSound() {
-            const som = document.getElementById("sound")
-            som.play();
-        }
-    </script>
+    <script src="/scripts/socket.js"></script>
     <script src="/vendors/chart.js/dist/Chart.bundle.min.js"></script>
     <script src="/assets/js/dashboard.js"></script>
     <script src="/assets/js/widgets.js"></script>
