--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -26,8 +26,7 @@
 
     <div class="col-sm-12">
         <div class="alert  alert-success alert-dismissible fade show" role="alert">
-            <span class="badge badge-pill badge-success">Success</span> You successfully read this important alert
-            message.
+            <span class="badge badge-pill badge-success">Bom Serviço! </span>  Não se esqueça de abrir sua loja.
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -52,11 +51,10 @@
                     </div>
                 </div>
                 <h4 class="mb-0">
-                    <span class="count">10468</span>
+                    <span class="count">{{countRequests}}</span>
                 </h4>
                 <p class="text-light">Pedidos</p>
-
-                <div class="chart-wrapper px-0" style="height:70px;" height="70">
+                <div class="chart-wrapper px-0" style="height:20px;" height="20">
                     <canvas id="widgetChart1"></canvas>
                 </div>
 
@@ -85,9 +83,9 @@
                 <h4 class="mb-0">
                     <span class="count">10468</span>
                 </h4>
-                <p class="text-light">Preparo)</p>
+                <p class="text-light">Preparo</p>
 
-                <div class="chart-wrapper px-0" style="height:70px;" height="70">
+                <div class="chart-wrapper px-0" style="height:20px;" height="20">
                     <canvas id="widgetChart2"></canvas>
                 </div>
 
@@ -119,7 +117,7 @@
 
             </div>
 
-            <div class="chart-wrapper px-0" style="height:70px;" height="70">
+            <div class="chart-wrapper px-0" style="height:20px;" height="20">
                 <canvas id="widgetChart3"></canvas>
             </div>
         </div>
@@ -147,7 +145,7 @@
                 </h4>
                 <p class="text-light">Cancelados</p>
 
-                <div class="chart-wrapper px-3" style="height:70px;" height="70">
+                <div class="chart-wrapper px-3" style="height:20px;" height="20">
                     <canvas id="widgetChart4"></canvas>
                 </div>
 
