--- a/src/views/partials/_popup.hbs
+++ b/src/views/partials/_popup.hbs
@@ -8,10 +8,21 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div id="divQr" class="modal-body ml-5">
-          <img id="qrCode" src="/images/qrCode.png" class="ml-5" alt="Qr code">
+        <div class="container">
+          <div class="card">
+            <div class="car-body">
+              <div class="row col-12">
+                <div class="form-group col-12 ml-3">
+                <div id="divQr" class="modal-body ml-5">
+                  <img id="qrCode" src="/images/qrCode.png" class="" alt="Qr code">
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="modal-footer">
+          <a href="/qrcode"><button class="btn btn-dark">Abrir Qr Code</button></a>
           <button type="button" class="btn btn-primary" data-dismiss="modal">Sair</button>
         </div>
       </div>
