--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <h4 class="mb-0">
-                    <span class="count">{{countRequests}}</span>
+                    <span class="count" id="somaPedido">{{countRequests}}</span>
                 </h4>
                 <p class="text-light">Pedidos</p>
                 <div class="chart-wrapper px-0" style="height:20px;" height="20">
