enviando upgrade front-end

--- a/src/views/clients/clients.hbs
+++ b/src/views/clients/clients.hbs
@@ -1,19 +1,37 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
-                {{#each clients}}
+            {{#each clients}}
             <div class="row col-12">
-                    <div class="form-group">
-                        <h5><strong>Nome: </strong>{{dataValues.name}}</h5>
-                        <h5><strong>Telefone: </strong> {{dataValues.telephone}}</h5>
-                        <img src="{{dataValues.photograph}}" alt="Foto de Perfil">
-                        <br>
-                        <a href="{{dataValues.photograph}}"><strong>Foto: </strong> {{dataValues.photograph}}</a>
-                        <p><strong>stage: </strong>{{dataValues.stage}}</p>
-                    </div>
-                    <hr>
+                <div class="form-group">
+                    <h5><strong>Nome: </strong>{{name}}</h5>
+                    <h5><strong>Telefone: </strong> {{telephone}}</h5>
+                    <a href="{{photograph}}"><strong>Foto: </strong> Ver Perfil</a>
+                    <p><strong>stage: </strong>{{stage}}</p>
+                </div>
+                <hr>
             </div>
-                {{/each}}
-         </div>
+            {{/each}}                       
+        </div>
+        <div class="row">
+                <nav aria-label="Page navigation example" style="margin-left: 35%;">
+                    <ul class="pagination">
+                        <li class="page-item">
+                            <a class="page-link" href="/clients/-1" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="/clients/1">1</a></li>
+                        <li class="page-item"><a class="page-link" href="/clients/2">2</a></li>
+                        <li class="page-item"><a class="page-link" href="/clients/3">3</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="/clients/+1" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+
     </div>
 </div>
