--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -34,16 +34,15 @@
                         aria-expanded="false"> <i class="menu-icon fa fa-desktop"></i>Visualizar Configurações</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-table"></i><a href="/msg/views">Visualizar Msg</a></li>                    
-                        <li><i class="fa fa-table"></i><a href="/msg/views">Visualizar Menu</a></li>
-                        <li><i class="fa fa-table"></i><a href="/clients/">Visualizar Clientes</a></li>
+                        <li><i class="fa fa-table"></i><a href="/menu/views">Visualizar Menu</a></li>
+                        <li><i class="fa fa-table"></i><a href="/clients/1">Visualizar Clientes</a></li>
                     </ul>
                 </li>                
                 <h3 class="menu-title">Icons</h3><!-- /.menu-title -->
                 <li class="menu-item-has-children dropdown ">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-cogs"></i>Configurações</a>
-                    <ul class="sub-menu children dropdown-menu">
-                        <li><i class="menu-icon fa fa-gear"></i><a href="/msg/register">Configurar Menssagens</a></li>
+                    <ul class="sub-menu children dropdown-menu">                        
                         <li><i class="menu-icon fa fa-gear"></i><a href="/menu/register">Cadastrar Menu</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="/config/delivery">Configurar Delivery</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="">Configurar Thema</a></li>
