--- a/src/views/clients/clients.hbs
+++ b/src/views/clients/clients.hbs
@@ -6,7 +6,7 @@
                 <div class="form-group">
                     <h5><strong>Nome: </strong>{{name}}</h5>
                     <h5><strong>Telefone: </strong> {{telephone}}</h5>
-                    <a href="{{photograph}}"><strong>Foto: </strong> Ver Perfil</a>
+                    <a href="{{photograph}}" target="_blank"><strong>Foto: </strong> Ver Foto</a>
                     <p><strong>stage: </strong>{{stage}}</p>
                 </div>
                 <hr>
