--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -13,7 +13,7 @@
                 <ol class="breadcrumb text-right">
                     <p>Ligar / Desligar &nbsp;&nbsp;</p>
                     <label class="switch">
-                        <input type="checkbox" data-toggle="modal" data-target=".modal">
+                        <input type="checkbox" id="checkbox" data-toggle="modal" >
                         <span class="slider round"></span>
                     </label>
                 </ol>
