--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -264,7 +264,7 @@
                 <div class="stat-widget-one">
                     <div class="stat-icon dib"><i class="ti-money text-success border-success"></i></div>
                     <div class="stat-content dib">
-                        <div class="stat-text">Total Lucro</div>
+                        <div class="stat-text" id="totalLucro">Total Lucro</div>
                         <div class="stat-digit">{{dinheiro profit}}</div>
                     </div>
                 </div>
