arrumando rota Qrcode e deletando modules não utilizados

--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -177,13 +177,14 @@
 
                         </div>
                     </div>
-
+                    <form action="" method="post">
                     <div class="form-group mt-1 col-12">
                         <p class="ml-3">Preparando <input type="radio" name="" id="" value="">&nbsp;&nbsp; Saiu para
                             Entrega <input type="radio" name="" id="" value="">&nbsp;&nbsp; Entregue <input type="radio"
                                 name="" id="" value=""></p>
                         <hr>
                     </div>
+                    </form>
                     <div class="form-group col-12">
                         <div class="form-group col-4">
                             <h6 class=""><strong>Pedido: </strong> #</h6>
