--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -297,7 +297,7 @@
                     <div class="stat-icon dib"><i class="ti-layout-grid2 text-warning border-warning"></i></div>
                     <div class="stat-content dib">
                         <div class="stat-text">Gasto materiais</div>
-                        <div class="stat-digit">{{dinheiro spent}}</div>
+                        <div class="stat-digit" id="gastoMaterial">{{dinheiro spent}}</div>
                     </div>
                 </div>
             </div>
