criando rota dados e arquivo lucros.hbs

--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -24,9 +24,8 @@
                     <ul class="sub-menu children dropdown-menu">                                              
                         <li><i class="fa fa-bar-chart-o"></i><a href="/msg/views">Media de Pedidos</a></li>                                           
                         <li><i class="fa fa-bar-chart-o"></i><a href="/msg/views">Media de Lucro</a></li>
-                        <li><i class="fa fa-money"></i><a href="/msg/views">Lucros</a></li>                                           
+                        <li><i class="fa fa-money"></i><a href="/dados/lucros">Lucros</a></li>                                           
                         <li><i class="fa fa-toggle-down"></i><a href="/msg/views">Gastos</a></li>                                                                   
-
                     </ul>
                 </li>
                 <li class="menu-item-has-children dropdown">
