--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -21,6 +21,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/buttonOnOff.css">
     <link rel="stylesheet" href="/css/popup.css">
+    
 </head>
 
 <body>
@@ -73,7 +74,10 @@
 
 
     <script src="/js/saudacoes.js"></script>
-
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+   <script type="text/javascript" src="/js/lucros.js"></script>
+   <script type="text/javascript" src="/js/maisVendidos"></script>
+    
 </body>
 
 </html>
