--- a/src/views/dados/lucros.hbs
+++ b/src/views/dados/lucros.hbs
@@ -1,8 +1,28 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
-            <h5>Graficos de Lucros</h5>
-            
+            <h5>Margem de Lucro</h5>
+            <hr>
+            <div class="row col-12" style="height: 400px;">
+                <div class="form-group" style="height: 400px; width:100%">
+                    <div id="chart_div" style="height: 400px; width:100%"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="card">
+        <div class="card-body">
+            <h5>Margem de Lucro</h5>
+            <hr>
+            <div class="row col-12" >
+                <div class="form-group" >
+                
+                    <div id="donutchart" style="width: 900px; height: 500px;"></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
